# qt-json-query

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakeOptions.cmake  CMakePresets.json  CMakeUserPresets.example.json  Init-DevEnv.ps1  LICENSE-MIT.txt  LICENSE.txt  Profile.sh  README.md  ROADMAP.md  qt.user.example.json  shell.nix  test_function_ref_integration.cpp  vcpkg.json
benchmarks/: Benchmark.cpp  CMakeLists.txt
compliance/: CMakeLists.txt
compliance/src/: cts_error_cross_reference.cpp  error_audit_script.cpp  rfc9535_terminology_audit.cpp
debug/: CMakeLists.txt
debug/src/: debug_cts_root_test.cpp  debug_root_array_test.cpp  debug_root_test.cpp  debug_test.cpp
examples/: CMakeLists.txt  as_function_demo.cpp  compilation_time_passes_demo.cpp  compile_once_reuse.cpp  complex_query.cpp  flagship_pipeline.cpp  function_ref_demo.cpp  monadic_error_handling_demo.cpp  pass_pipeline_demo.cpp  pointer_writes_and_patch.cpp  refactor_potential.cpp  simple_path.cpp  simple_pointer.cpp  simple_schema.cpp
perf/: CMakeLists.txt  PERFORMANCE_ROADMAP.md  performance_baseline.md
perf/results/: benchmark_2026-02-08_170726.json  benchmark_2026-02-08_205956.json  benchmark_2026-02-08_210735.json  benchmark_2026-02-08_211546.json  benchmark_2026-02-08_211826.json  benchmark_2026-02-08_220034.json  benchmark_2026-07-03_macos-appleclang.json  benchmark_2026-07-03_win-msvc.json
perf/src/: allocation_hotspot_analyzer.cpp  allocation_probe.cpp  cache_analysis_tool.cpp  memory_allocation_test.cpp  memory_optimization_test.cpp  profile_test.cpp  qt_memory_tracker.cpp
refactoring/: CMakeLists.txt
refactoring/scripts/: code_style_modernizer.py  diagnostic_auto_modernization.sh  diagnostic_brace_modernization.sh  diagnostic_reference_auto_modernization.sh  working_clang_tidy.sh
refactoring/src/: comprehensive_auto_modernizer.cpp  comprehensive_brace_modernizer.cpp  comprehensive_variable_modernizer.cpp  reference_auto_modernizer.cpp
src/json-query/: CMakeLists.txt  JSONPointer.cpp
src/json-query/json-patch/: JSONMergePatch.cpp  JSONPatch.cpp  JSONPatchBuilder.cpp
src/json-query/json-path/: JSONPath.cpp  JSONPathBracketRules.cpp  JSONPathCompile.cpp  JSONPathContextFilter.cpp  JSONPathCreate.cpp  JSONPathEvalHelpers.cpp  JSONPathEvaluate.cpp  JSONPathExpected.cpp  JSONPathFilter.cpp  JSONPathFilterComparison.cpp  JSONPathFilterComparisonDispatcher.cpp  JSONPathFilterCompile.cpp  JSONPathFilterCore.cpp  JSONPathFilterEmbeddedParsers.cpp  JSONPathFilterExistenceParsers.cpp  JSONPathFilterFunctions.cpp  JSONPathFilterHelpers.cpp  JSONPathFilterOrchestration.cpp  JSONPathFilterParsers.cpp  JSONPathFilterParsersImpl.cpp  JSONPathLog.cpp  JSONPathParseUtils.cpp  JSONPathParsers.cpp  JSONPathPointerConversion.cpp  JSONPathRecursion.cpp  JSONPathTokenDispatch.cpp  JSONPathTokenEvaluators.cpp  JSONPathWildcardRecursive.cpp  PathEvaluator.cpp
src/json-query/json-pointer/: JSONPointer.cpp  JSONPointerWrite.cpp
src/json-query/json-schema/: JSONSchema.cpp  JSONSchemaCompile.cpp  JSONSchemaValidate.cpp  MetaSchema2020_12.cpp  SchemaRegistry.cpp
tests/: CMakeLists.txt  ContainerCursorGTest.cpp  ContextAwareContainerCursorGTest.cpp  JSONPathBaeldungExtraGTest.cpp  JSONPathBaeldungGTest.cpp  JSONPathConformanceGTest.cpp  JSONPathConformanceTest.cpp  JSONPathGTest.cpp  JSONPathLogicalOrPredicateGTest.cpp  JSONPathTest.cpp  JSONPointerConformanceGTest.cpp  JSONPointerConformanceTest.cpp  JSONPointerGTest.cpp  JSONPointerTest.cpp  README.md  test_compact_context_filter_fix.cpp  test_compact_context_filter_standalone.cpp  test_variant_storage_comprehensive.cpp
tests/cmake/: CoreTests.cmake  ExtensionTests.cmake  FuzzTests.cmake  IETFJSONSchemaDraft2020_12Tests.cmake  InternalTests.cmake  JSONSchemaTests.cmake  RFC6901Tests.cmake  RFC6902Tests.cmake  RFC7386Tests.cmake  RFC9535Tests.cmake
tests/consumer-smoke/: CMakeLists.txt  main.cpp
tests/embed-smoke/: CMakeLists.txt
tests/extensions/jayway/: JSONPathBaeldungGTest.cpp
tests/fuzz/: README.md  fuzz_combined_evaluation.cpp  fuzz_container_cursor.cpp  fuzz_filter_storage.cpp  fuzz_jsonpatch_apply.cpp  fuzz_jsonpath_parsing.cpp  fuzz_jsonpointer_parsing.cpp  fuzz_jsonpointer_write.cpp  fuzz_jsonschema.cpp  fuzz_simple_api.cpp  setup_corpus.py
tests/fuzz/corpus/: json_document_seeds.txt  jsonpath_seeds.txt  jsonpointer_seeds.txt  jsonschema_seeds.txt
tests/include/framework/: ComplianceDataGTest.hpp  JSONMatchersGTest.hpp
tests/jayway-parity/: DeepScanParityGTest.cpp  EscapeParityGTest.cpp  FilterParityGTest.cpp  JaywayParityGTest.cpp  JaywayParityGTestHelpers.hpp  MapperParityGTest.cpp  MultiPropParityGTest.cpp  OptionsParityGTest.cpp  PathCompilerParityGTest.cpp
tests/json-query/json-patch/: JSONPatchGTest.cpp
tests/json-query/json-path/: JSONPathConformanceGTest.cpp  JSONPathGTest.cpp  JSONPathLogicalOrGTest.cpp  JSONPathLogicalOrPredicateGTest.cpp
tests/json-query/json-pointer/: JSONPointerConformanceGTest.cpp  JSONPointerGTest.cpp  JSONPointerWriteGTest.cpp
tests/json-query/json-schema/: JSONSchemaBasicGTest.cpp  JSONSchemaBasicTests.cpp  JSONSchemaFormatGTest.cpp  JSONSchemaFormatTests.cpp  JSONSchemaKeywordGTest.cpp  JSONSchemaKeywordTests.cpp  JSONSchemaRefGTest.cpp  JSONSchemaRefTests.cpp  JSONSchemaRegistryGTest.cpp  SchemaRegistryTests.cpp
tests/json-query/utils/: JSONValueUtilsGTest.cpp
tests/rfc-6901/: RFC6901ComplianceGTest.cpp  rfc6901-tests.json
tests/rfc-9535/: CTSComplianceGTest.cpp  JSONPathErrorGTest.cpp  RFC9535CTSComplianceGTest.cpp
tests/rfc-compliance-suite/: JSONSchemaTestSuiteRunner.cpp
tests/rfc-compliance-suite/ietf-json-schema-draft-2020-12/: IETFJSONSchemaComplianceGTest.cpp  JSONSchemaTestSuiteRunner.cpp  KnownFailures.hpp
tests/rfc-compliance-suite/rfc-6901/: RFC6901ComplianceGTest.cpp  RFC6901WriteComplianceGTest.cpp  rfc6901-tests.json  rfc6901-write-tests.json
tests/rfc-compliance-suite/rfc-6902/: KnownFailures.hpp  RFC6902ComplianceGTest.cpp
tests/rfc-compliance-suite/rfc-7386/: rfc7386-tests.json  (+1 more)
(+190 files in other folders)
